fix button disabled style on mobile view

--- a/assets/stylesheets/mmn-solved-unsolved-button.scss
+++ b/assets/stylesheets/mmn-solved-unsolved-button.scss
@@ -23,3 +23,9 @@ $success: green;
     display: none !important;
   }
 }
+
+.mobile-view #topic-footer-buttons {
+  .btn[disabled]:hover, .btn.disabled:hover {
+    color: unset !important;
+  }
+}
